--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -74,6 +74,95 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="29" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/gp/product/B07JFP5G4L/ref=as_li_ss_tl?smid=ATVPDKIKX0DER&psc=1&ascsub&linkCode=sl1&tag=3628-20&linkId=90a0ee9880234398cf1bf1347cb83766&language=en_US"><img src="https://images-na.ssl-images-amazon.com/images/I/71GSwVu8VEL._SX522_.jpg" alt="Logitech Crayon" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>29% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/gp/product/B07JFP5G4L/ref=as_li_ss_tl?smid=ATVPDKIKX0DER&psc=1&ascsub&linkCode=sl1&tag=3628-20&linkId=90a0ee9880234398cf1bf1347cb83766&language=en_US">Logitech Crayon for iPad (6th Gen), iPad Air (3rd Gen) and iPad Mini (5th Gen)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$49.99</span><span class="ori_price">$69.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/gp/product/B07JFP5G4L/ref=as_li_ss_tl?smid=ATVPDKIKX0DER&psc=1&ascsub&linkCode=sl1&tag=3628-20&linkId=90a0ee9880234398cf1bf1347cb83766&language=en_US">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="22" data-price="549.00">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/gp/product/B079JXY4TJ/ref=as_li_ss_tl?&ascsub&linkCode=sl1&tag=3628-20&linkId=2e7535cd1ccb36192dc415ffe49e6805&language=en_US"><img src="https://images-na.ssl-images-amazon.com/images/I/81VnTSgQgQL._SX679_.jpg" alt="Samsung Galaxy S9+" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>22% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/gp/product/B079JXY4TJ/ref=as_li_ss_tl?&ascsub&linkCode=sl1&tag=3628-20&linkId=2e7535cd1ccb36192dc415ffe49e6805&language=en_US">Samsung Galaxy S9+ Factory Unlocked Smartphone 64GB - Midnight Black - US Warranty</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$549.00</span><span class="ori_price">$699.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/gp/product/B079JXY4TJ/ref=as_li_ss_tl?&ascsub&linkCode=sl1&tag=3628-20&linkId=2e7535cd1ccb36192dc415ffe49e6805&language=en_US">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="12" data-price="749.99">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/gp/product/B07NPKP57H/ref=as_li_ss_tl?ie=UTF8&smid=ATVPDKIKX0DER&ascsub&th=1&linkCode=sl1&tag=3628-20&linkId=c83a639da31afbf45e27b3502629a65d&language=en_US"><img src="https://images-na.ssl-images-amazon.com/images/I/61kNf2L12DL._SX679_.jpg" alt="Samsung Galaxy S10e" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>12% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/gp/product/B07NPKP57H/ref=as_li_ss_tl?ie=UTF8&smid=ATVPDKIKX0DER&ascsub&th=1&linkCode=sl1&tag=3628-20&linkId=c83a639da31afbf45e27b3502629a65d&language=en_US">Samsung Galaxy S10e Factory Unlocked Phone with 256GB (U.S. Warranty), Flamingo Pink</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$749.99</span><span class="ori_price">$849.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/gp/product/B07NPKP57H/ref=as_li_ss_tl?ie=UTF8&smid=ATVPDKIKX0DER&ascsub&th=1&linkCode=sl1&tag=3628-20&linkId=c83a639da31afbf45e27b3502629a65d&language=en_US">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="54" data-price="15.99">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/ZAGG-InvisibleShield-Defense-Screen-Protector/dp/B074STCH8K/ref=as_li_ss_tl?_encoding=UTF8&imprToken=MLv6V3Z4qhdxVijcZYb-rg&qid=1559505861&refinements=p_75:50-&s=electronics&slotNum=67&sr=1-265&linkCode=sl1&tag=3628-20&linkId=62dcc33fa7a2bc8a43413bbea0b602c9&language=en_US"><img src="https://m.media-amazon.com/images/I/717cgWD53WL._AC_UL436_.jpg" alt="Glass Defense" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>54% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/ZAGG-InvisibleShield-Defense-Screen-Protector/dp/B074STCH8K/ref=as_li_ss_tl?_encoding=UTF8&imprToken=MLv6V3Z4qhdxVijcZYb-rg&qid=1559505861&refinements=p_75:50-&s=electronics&slotNum=67&sr=1-265&linkCode=sl1&tag=3628-20&linkId=62dcc33fa7a2bc8a43413bbea0b602c9&language=en_US">ZAGG InvisibleShield Glass Defense - Lightwieght Tempered Glass Screen Protector - Made for Apple iPhone X / XS - Case Friendly</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$15.99</span><span class="ori_price">$34.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/ZAGG-InvisibleShield-Defense-Screen-Protector/dp/B074STCH8K/ref=as_li_ss_tl?_encoding=UTF8&imprToken=MLv6V3Z4qhdxVijcZYb-rg&qid=1559505861&refinements=p_75:50-&s=electronics&slotNum=67&sr=1-265&linkCode=sl1&tag=3628-20&linkId=62dcc33fa7a2bc8a43413bbea0b602c9&language=en_US">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="54" data-price="739.00">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/Microsoft-Surface-Laptop-Intel-256GB/dp/B075S5XCC3/ref=as_li_ss_tl?_encoding=UTF8&imprToken=MLv6V3Z4qhdxVijcZYb-rg&qid=1559505861&refinements=p_75:50-&s=electronics&slotNum=67&sr=1-275&linkCode=sl1&tag=3628-20&linkId=47d518e911433dc3115030a8385851c4&language=en_US"><img src="https://m.media-amazon.com/images/I/61aZwj3rIyL._AC_UL436_.jpg" alt="Microsoft Surface Laptop" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>54% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/Microsoft-Surface-Laptop-Intel-256GB/dp/B075S5XCC3/ref=as_li_ss_tl?_encoding=UTF8&imprToken=MLv6V3Z4qhdxVijcZYb-rg&qid=1559505861&refinements=p_75:50-&s=electronics&slotNum=67&sr=1-275&linkCode=sl1&tag=3628-20&linkId=47d518e911433dc3115030a8385851c4&language=en_US">Microsoft Surface Laptop (1st Gen) (Intel Core i7, 8GB RAM, 256GB) - Cobalt Blue</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$739.00</span><span class="ori_price">$1,599.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/Microsoft-Surface-Laptop-Intel-256GB/dp/B075S5XCC3/ref=as_li_ss_tl?_encoding=UTF8&imprToken=MLv6V3Z4qhdxVijcZYb-rg&qid=1559505861&refinements=p_75:50-&s=electronics&slotNum=67&sr=1-275&linkCode=sl1&tag=3628-20&linkId=47d518e911433dc3115030a8385851c4&language=en_US">Shop Now</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="25" data-price="discounted_price">
   <div class="image_box">
