--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -35,6 +35,262 @@
  </div>
 -->
 
+<div class="card clearfix" data-score="55" data-price="8.55">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B07RRS1X2G/ref=as_li_ss_tl?m=AMT165LVAI40J&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=e22193e28c581f56c530d2c32f89fd9a&language=en_US"><img src="https://m.media-amazon.com/images/I/51y0BTFmdWL._SR400,400_.jpg" alt="HOPEMATE Retinol Cream" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B07RRS1X2G/ref=as_li_ss_tl?m=AMT165LVAI40J&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=e22193e28c581f56c530d2c32f89fd9a&language=en_US">HOPEMATE Retinol Cream, Anti-Aging Moisturizer Cream 2.5% for Face and Eye Care, Anti-Wrinkle Essence</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.55</span><span class="ori_price">$18.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>percentage% off at $18.99</strong> with promo code: <strong>55NM6YKV</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B07RRS1X2G/ref=as_li_ss_tl?m=AMT165LVAI40J&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=e22193e28c581f56c530d2c32f89fd9a&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="59.85">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B074C2FZXK/ref=as_li_ss_tl?m=A1IZMQE0YMTB70&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=62b4c14661ff9b84908c7774937efcc6&language=en_US"><img src="https://m.media-amazon.com/images/I/5116oALOaNL._SR400,400_.jpg" alt="Premium Weighted Blanket" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B074C2FZXK/ref=as_li_ss_tl?m=A1IZMQE0YMTB70&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=62b4c14661ff9b84908c7774937efcc6&language=en_US">Weighted Idea Premium Weighted Blanket 20 lbs Adult | 60''x80'' | Cotton | Grey | Gift for Father</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$59.85</span><span class="ori_price">$79.80</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>25% off at $79.80</strong> with promo code: <strong>25Q34B5F</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 14, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B074C2FZXK/ref=as_li_ss_tl?m=A1IZMQE0YMTB70&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=62b4c14661ff9b84908c7774937efcc6&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="14.69">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B07PMJVD1G/ref=as_li_ss_tl?m=A3J3LPF0T0FU3E&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=003a93ed3c29ce9ad410b56d5bf86049&language=en_US"><img src="https://m.media-amazon.com/images/I/61uVWs51z2L._SR400,400_.jpg" alt="USB C Hub" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B07PMJVD1G/ref=as_li_ss_tl?m=A3J3LPF0T0FU3E&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=003a93ed3c29ce9ad410b56d5bf86049&language=en_US">USB C Hub, RAOYI 5-in-1 Type C Hub,2 USB 3.0 Ports, SD/TF Card Reader, Portable USB-C Power Delivery PD (65W)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.69</span><span class="ori_price">$20.99</span>
+        <div class="tooltip_red">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code to the product that is being discounting.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>30% off at $20.99</strong> with promo code: <strong>30TFLCYO</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 22, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B07PMJVD1G/ref=as_li_ss_tl?m=A3J3LPF0T0FU3E&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=003a93ed3c29ce9ad410b56d5bf86049&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="38.49">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B07LBL1VM8/ref=as_li_ss_tl?m=A3QPX0FMLSGQ20&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=ac47abefcb88ee436a6a0ec96d436bb4&language=en_US"><img src="https://m.media-amazon.com/images/I/71-okJr9uyL._SR400,400_.jpg" alt="Sous Vide Cooker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B07LBL1VM8/ref=as_li_ss_tl?m=A3QPX0FMLSGQ20&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=ac47abefcb88ee436a6a0ec96d436bb4&language=en_US">Sous Vide Cooker, AuAg Immersion Circulator 950W with Preset Recipes and Accuracy Temperature Control</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$38.49</span><span class="ori_price">$54.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>30% off at $54.99</strong> with promo code: <strong>30GV6D2P</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 07, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B07LBL1VM8/ref=as_li_ss_tl?m=A3QPX0FMLSGQ20&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=ac47abefcb88ee436a6a0ec96d436bb4&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="20.99">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B07HMYXMLB/ref=as_li_ss_tl?m=A3O1VQXCMJQW7W&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=4e6cab1f8fb811048e74621de1b9d132&language=en_US"><img src="https://m.media-amazon.com/images/I/71L4M6ueobL._SR400,400_.jpg" alt="Qi Wireless Car Charger Mount" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B07HMYXMLB/ref=as_li_ss_tl?m=A3O1VQXCMJQW7W&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=4e6cab1f8fb811048e74621de1b9d132&language=en_US">Qi Wireless Car Charger Mount, CLEEBOURG 7.5W/10W Fast Charging Automatic Clamping Car Phone Holder Air Vent Dashboard</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.99</span><span class="ori_price">$34.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>40% off at $34.99</strong> with promo code: <strong>408ZEMTD</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 11, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B07HMYXMLB/ref=as_li_ss_tl?m=A3O1VQXCMJQW7W&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=4e6cab1f8fb811048e74621de1b9d132&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="26.99">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B07FCFCQG9/ref=as_li_ss_tl?m=A354ZW908SWFKV&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=d8f8152793f39c06d53d52aa74d9e5eb&language=en_US"><img src="https://m.media-amazon.com/images/I/61VSTt0GNyL._SR400,400_.jpg" alt="Surface Pen" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B07FCFCQG9/ref=as_li_ss_tl?m=A354ZW908SWFKV&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=d8f8152793f39c06d53d52aa74d9e5eb&language=en_US">Surface Pen - Microsoft Certified, 4096 Pressure Points of High Sensitivity, Rechargeable Stylus </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$26.99</span><span class="ori_price">$44.99</span>
+         <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>40% off at $44.99</strong> with promo code: <strong>40XUQNCS</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B07FCFCQG9/ref=as_li_ss_tl?m=A354ZW908SWFKV&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=d8f8152793f39c06d53d52aa74d9e5eb&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="25.00">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B07M9K96MM/ref=as_li_ss_tl?m=A1ZISYOXLTU6JG&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=63a6309b7e7560f068cef6d619625304&language=en_US"><img src="https://m.media-amazon.com/images/I/61t45lsq-JL._SR400,400_.jpg" alt="Bluetooth Speaker Wireless Speaker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B07M9K96MM/ref=as_li_ss_tl?m=A1ZISYOXLTU6JG&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=63a6309b7e7560f068cef6d619625304&language=en_US">1Mii Long Range Bluetooth Speaker Wireless Speaker, Portable Speaker with Music Mode&Vocal Mode, 10W 360⁰ Music Speakers</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.00</span><span class="ori_price">$49.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>50% off at $49.99</strong> with promo code: <strong>50MBLI3L</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B07M9K96MM/ref=as_li_ss_tl?m=A1ZISYOXLTU6JG&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=63a6309b7e7560f068cef6d619625304&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="4.50">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B07RWZPY2H/ref=as_li_ss_tl?m=A9LL1PPZ3FFMD&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=3b4bf82d5513dae09ba890bb6bc1415e&language=en_US"><img src="https://m.media-amazon.com/images/I/71O2ie21W+L._SR400,400_.jpg" alt="Cell Phone Stand" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B07RWZPY2H/ref=as_li_ss_tl?m=A9LL1PPZ3FFMD&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=3b4bf82d5513dae09ba890bb6bc1415e&language=en_US">Cell Phone Stand for Desk, Oternal Adjustable Tablet Stand Holder Dock</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.50</span><span class="ori_price">$8.99</span></address>
+      <p><span>Take <strong>50% off at $8.99</strong> with promo code: <strong>50HM7THZ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 10, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B07RWZPY2H/ref=as_li_ss_tl?m=A9LL1PPZ3FFMD&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=3b4bf82d5513dae09ba890bb6bc1415e&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="16.79">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B01FTYBOC4/ref=as_li_ss_tl?m=A2IYYLRZOHIOEK&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=22e54094076dee3b634e1697059f7dc2&language=en_US"><img src="https://m.media-amazon.com/images/I/61QFzA-T-uL._SR400,400_.jpg" alt="Power Strip Outlets" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B01FTYBOC4/ref=as_li_ss_tl?m=A2IYYLRZOHIOEK&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=22e54094076dee3b634e1697059f7dc2&language=en_US">HITRENDS Surge Protector Power Strip 6 Outlets with 6 USB Charging Ports, USB Extension Cord</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.79</span><span class="ori_price">$23.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>30% off at $23.99</strong> with promo code: <strong>30ZTTNEX</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 16, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B01FTYBOC4/ref=as_li_ss_tl?m=A2IYYLRZOHIOEK&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=22e54094076dee3b634e1697059f7dc2&language=en_US">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="12.00">
+  <div class="image_box">
+    <a target="_blank" href="https://www.amazon.com/dp/B07QVZFJJ1/ref=as_li_ss_tl?m=A3DRE2FBEV2RPE&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=7f84c9c5864d570b273a8b548b9f4bd0&language=en_US"><img src="https://m.media-amazon.com/images/I/61jy2m3YnIL._SR400,400_.jpg" alt="Wireless Phone Charger" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://www.amazon.com/dp/B07QVZFJJ1/ref=as_li_ss_tl?m=A3DRE2FBEV2RPE&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=7f84c9c5864d570b273a8b548b9f4bd0&language=en_US">HAODU Wireless Phone Charger, Qi-Certified Fast Charger Pad </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.00</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>70% off at $39.99</strong> with promo code: <strong>704FO818</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://www.amazon.com/dp/B07QVZFJJ1/ref=as_li_ss_tl?m=A3DRE2FBEV2RPE&ref=mpc_asin_image&linkCode=sl1&tag=3628-20&linkId=7f84c9c5864d570b273a8b548b9f4bd0&language=en_US">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="20" data-price="15.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2WDIV4e"><img src="https://m.media-amazon.com/images/I/61l3zZvFYiL._SR400,400_.jpg" alt="Digital Alarm Clock" /></a>
