--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -52,7 +52,7 @@
           </div>
          </div>
       </address>
-      <p><span>Take <strong>percentage% off at $18.99</strong> with promo code: <strong>55NM6YKV</strong></span></p>
+      <p><span>Take <strong>55% off at $18.99</strong> with promo code: <strong>55NM6YKV</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 02, 2019 at 11:59 PM PDT</span>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
