--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Oh,igottabuythis - Coolest Gadgets, Amazon Coupons&Promo Codes</title>
+    <title>Oh,igottabuythis - Coolest Gadgets, Amazon Promo Codes, Coupons and the best deals</title>
     <meta name="description" content="oh,igottabuythis is here to discover awesome gadgets. Find thousands of Amazon best deals, coupon codes, promotions you love.">
     <meta charset="utf-8"/>
     <meta content="IE=edge, chrome=1" http-equiv="X-UA-Compatible">
