--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -74,6 +74,193 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="56" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wlfi8K"><img src="https://m.media-amazon.com/images/I/91-LJ+I5vlL._AC_UL436_.jpg" alt="OtterBox DEFENDER SERIES Case" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>56% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Wlfi8K">OtterBox DEFENDER SERIES Case for iPad Air 2 - Retail Packaging - BLACK</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$39.99</span><span class="ori_price">$89.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wlfi8K">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="99.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KoWVbu"><img src="https://m.media-amazon.com/images/I/51UjMkiPDZL._AC_UL436_.jpg" alt="Logitech G933 Artemis Spectrum" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KoWVbu">Logitech G933 Artemis Spectrum – Wireless RGB 7.1 Dolby and DTS Headphone Surround Sound Gaming Headset</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$99.99</span><span class="ori_price">$199.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KoWVbu">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="46" data-price="70.01">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WnSepF"><img src="https://images-na.ssl-images-amazon.com/images/I/71Bew1ZtLeL._SX466_.jpg" alt="Beats EP On-Ear Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>46% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WnSepF">Beats EP On-Ear Headphones - Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$70.01</span><span class="ori_price">$129.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WnSepF">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="28" data-price="199.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WnSGEn"><img src="https://images-na.ssl-images-amazon.com/images/I/71036Tr8QsL._UX679_.jpg" alt="Fossil Smartwatch" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>28% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WnSGEn">Fossil Men's Gen 4 Explorist HR Stainless Steel Touchscreen Smartwatch with Heart Rate, GPS, NFC, and Smartphone Notifications</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$199.00</span><span class="ori_price">$275.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WnSGEn">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="12" data-price="379.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WmtYnK"><img src="https://images-na.ssl-images-amazon.com/images/I/512O6Fw5dTL._SX522_.jpg" alt="Apple Watch Series 4" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>12% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WmtYnK">Apple Watch Series 4 (GPS, 44mm) - Space Gray Aluminium Case with Black Sport Band</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$379.00</span><span class="ori_price">$429.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WmtYnK">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="497.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/3152Ng9"><img src="https://m.media-amazon.com/images/I/81BCS8w0v9L._AC_UL436_.jpg" alt="PANASONIC LUMIX GX85 4K Digital Camera" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/3152Ng9">PANASONIC LUMIX GX85 4K Digital Camera, 12-32mm and 45-150mm Lens Bundle, 16 Megapixel Mirrorless Camera Kit</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$497.99</span><span class="ori_price">$999.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/3152Ng9">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="11.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WJGVYj"><img src="https://m.media-amazon.com/images/I/81CZ+Lus3zL._AC_UL320_.jpg" alt="Gillette Series Shaving Gel" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WJGVYj">Gillette Series Shaving Gel Sensitive Skin 7 oz (Pack of 6) </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.97</span><span class="ori_price">$23.94</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WJGVYj">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="63" data-price="18.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KppLbV"><img src="https://m.media-amazon.com/images/I/31ym-CQxOeL._AC_UL320_.jpg" alt="Moist Treatment Essence" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>63% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KppLbV">MISSHA Time Revolution The First Intensive Moist Treatment Essence, 150 ml</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$18.00</span><span class="ori_price">$49.00</span>
+        <div class="tooltip_orange">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount width coupon</p>
+          </div>
+        </div> 
+      </address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KppLbV">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="53" data-price="14.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JTv8AP"><img src="https://m.media-amazon.com/images/I/71lb5I5fhyL._AC_UL320_.jpg" alt="Lodge 10.5 Inch Cast Iron Griddle" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>53% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JTv8AP">Lodge 10.5 Inch Cast Iron Griddle. Pre-seasoned Round Cast Iron Pan Perfect for Pancakes, Pizzas</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.90</span><span class="ori_price">$33.18</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JTv8AP">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="18" data-price="13.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Z0bRRq"><img src="https://m.media-amazon.com/images/I/81luWxE11XL._AC_UL320_.jpg" alt="Kasa Smart WiFi Plug by TP-Link" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>18% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Z0bRRq">Kasa Smart WiFi Plug by TP-Link – Smart Plug, No Hub Required, Works with Alexa and Google</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$13.99</span><span class="ori_price">$16.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Z0bRRq">Shop Now</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="45" data-price="54.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2WDW39D"><img src="https://images-na.ssl-images-amazon.com/images/I/716pog8j5xL._SX522_.jpg" alt="Instant Pot DUO Plus 3" /></a>
