--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -66,7 +66,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   header.on .gnb_pc{margin-top:0;text-align:center}
   header.on .gnb_pc>a>.oh_logo{display:inline-block;float:left;width:50px;height:50px;margin:11px 10px 0 0;}
 
-  header.on .visual{float:left;margin-top:15px;height:100%;}
+  header.on .visual{float:left;margin-top:18px;height:100%;}
   header.on .visual img{width:260px;}
   header.on .gnb_pc>ul{float:left;margin:0 0 0 0;padding:10px 0;}
   header.on .gnb_pc>ul>li{float:left;width:150px;font-weight:400;text-align:center;}
@@ -82,7 +82,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   .header_short .gnb_pc{margin-top:0;text-align:center}
   .header_short .gnb_pc>a>.oh_logo{display:inline-block;float:left;width:50px;height:50px;margin:11px 10px 0 0;}
 
-  .header_short .visual{float:left;margin-top:15px;height:100%;}
+  .header_short .visual{float:left;margin-top:20px;height:100%;}
   .header_short .visual img{width:260px;}
   .header_short .gnb_pc>ul{float:left;margin:0 0 0 0;padding:10px 0;}
   .header_short .gnb_pc>ul>li{float:left;width:150px;font-weight:400;text-align:center;}
@@ -115,11 +115,11 @@ header .gnb_m,header .gnb_open2{display:none;}
   header .gnb_open2 img{width:55px;height:30px;}
   header .gnb_pc_scroll{display:none;}
 
-  header .membership{}
+ /* header .membership{}
   header .membership p{color:#fff;font-size:20px;}
   header .membership ul{margin:20px 0 0 5%;}
   header .membership ul li{float:left;width:120px;text-align:center;background:#fff;border:1px solid #000;}
-  header .membership ul li a{display:block;text-decoration:none;color:#000;font-size:25px;line-height:1.3;}
+  header .membership ul li a{display:block;text-decoration:none;color:#000;font-size:25px;line-height:1.3;}*/
 }
 
 @media screen and (min-width:681px) and (max-width:1199px){
@@ -133,7 +133,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   header.on{border-bottom:1px solid #ccc;height:60px;}
   header.on .gnb_pc>a>.oh_logo{display:inline-block;float:left;width:50px;height:50px;margin:6px 10px 0 0;}
 
-  header.on .visual{float:left;margin-top:10px;}
+  header.on .visual{float:left;margin-top:15px;}
   header.on .visual img{width:200px;}
   
   header.on .gnb_pc>ul{margin:0 0 0 20px;padding:5px 0;}
